# WSP_PB_PE_BIM

./: GUIA_PERSONALIZAR_TOOL1_TOOL2.md  LICENSE  LIMPIEZA_ESTRUCTURACION_RESUMEN.md  README.md  VERIFICACION_STRUCTURAL_QC.md
WSP_PB_PE_BIM.extension/: .gitignore  .pylintrc  CONFIGURACION_IDE.md  bundle.yaml  pyproject.toml  pyrightconfig.json
WSP_PB_PE_BIM.extension/WSP BIM Peru.tab/: bundle.yaml
WSP_PB_PE_BIM.extension/WSP BIM Peru.tab/Coordination.panel/: bundle.yaml
WSP_PB_PE_BIM.extension/WSP BIM Peru.tab/Docs.panel/: bundle.yaml
WSP_PB_PE_BIM.extension/WSP BIM Peru.tab/Modeling.panel/: bundle.yaml
WSP_PB_PE_BIM.extension/WSP BIM Peru.tab/QA_QC.panel/: bundle.yaml
WSP_PB_PE_BIM.extension/WSP BIM Peru.tab/QA_QC.panel/Structural QC.pushbutton/: script.py  wpf_dialog.py
WSP_PB_PE_BIM.extension/WSP BIM Peru.tab/QA_QC.panel/Tool1.pushbutton/: bundle.yaml  script.py
WSP_PB_PE_BIM.extension/WSP BIM Peru.tab/QA_QC.panel/Tool1.pushbutton/ui/: StructuralQC_Dialog.xaml
WSP_PB_PE_BIM.extension/lib/: wsp_utils.py
WSP_PB_PE_BIM.extension/stubs/: system.pyi
